|                Version 0.9                   |
================================================
 - gui: rolBar can use position button to scroll text;
 - gui: button type: KEEP_PRESSING for buttons that will
        remain pressed until mouse is released, ignoring
		  if inner the button area;
 - Setting delta to sceneNode minY when lesser than 0;
 - scripts: fixed a bug on jumping from "else if" statements when an "if" was
            successfull;

BugFixes:
 - Fixed a possible double OpenAL stop when releasing an ogg_stream;
 - Fixed a undesired loop with a sound file lesser than the buffer;

================================================
|                Version 0.8                   |
|            Released: 2011-12-19              |
================================================
 - Added view frustum culling for shadows;
 - map: Add object rotation to all axis;
 - Created scene and sceneNode abstractions;
 - New Bounding Box class;
 - Added character info text when mouse over portrait;
 - gui: defined mouse hint for all gui objects;
 - gui: added object visibility flag;
 - Added support to MacOSX;
 - Added shader for texture splatting (splatting now can be via
   ARB extensions or GLSL shader);
 - Added money split;
 - New models;
 - New mission: Old software factory computer;
 - New maps;
 - dntMapEditor: Show mouse world coordinates;
 - dntMapEditor: grid mode alternative on object XZ move;
 - dntMapEditor: Tool to select and edit objects;
 - Using code::blocks as default IDE for Windows build;

BugFixes:
 - Fixed a bug that freezes the game when drinking a beer (thanks 
 to zerberros for the bug report);
 - Fixed a bug that won't let remove of some objects from list;
 - Fixed a bug when leveling up a skill with effects applied;
 - Fixed white-shadows on some drivers;

================================================
|                Version 0.7                   |
|            Released: 2011-02-28              |