@@ -3,23 +3,23 @@
 # they are idle on a map;
 
 # Cattle States (actions):
-#  2  - sit
-#  3  - eat
-#  3  - eat & flick tail
 #  1  - stand
-#  1  - stand & flick tail
+#  2  - look
+#  3  - eat
 #  4  - walk to another position
 #  5  - moo
+#  6  - flick tail
+
 
 script()
 
-   int state = 1  # initially, they are standed;
+   float pX
+   float pZ
 
-   float pX = 0
-   float pZ = 0
+   string mooSound
+   mooSound = "sndfx/animal/mudchuteanimals/Mudchute_cow_1.ogg"
 
-   int diceValue = 0
-   int flickTail = 0
+   int diceValue
 
    # The infinite while-the-application-is-running loop
    # Just remember: when in battle mode, this script won't be called,
@@ -30,56 +30,44 @@ script()
       # Let's random it!
       diceValue = rollDice(10)
 
-      if(diceValue <= 2)
-         # Stand state (20% chance)
-         print("Stand")
-         state = 1
+      if(diceValue == 1)
+         # Stand state (10% chance)
+         #print("Stand")
          setAnimation(SELF_CHARACTER, 0)
-         # Verify if will flickTail
-         #flickTail = rollDice(2)
-         #if(flickTail == 1)
-         #   callAnimation(SELF_CHARACTER, 8)
-         #end
          # Stand for 5 seconds
          wait(5)
-      else if(diceValue == 3)
-         # Moo!
-         print("Moo!")
-         state = 5
+      else if(diceValue <= 3)
+         # Moo (20%)
+         #print("Moo!")
          # Only need one cycle of Moo animation (no repeats)
-         callAnimation(SELF_CHARACTER, 7)
-         # TODO: call moo sound!
-         # Wait 2 seconds before take anoter action
-         wait(2)
-      else if( (diceValue > 4) && (diceValue <= 6) )
+         callAnimation(SELF_CHARACTER, 8)
+         # Play moo sound!
+         playSound(mooSound, OWNER_POSX, OWNER_HEIGHT, OWNER_POSZ)
+         # Wait 3 seconds before take another action
+         wait(3)
+      else if(diceValue <= 6)
          # Eat state (30%)
-         print("Eat")
-         state = 3
-         setAnimation(SELF_CHARACTER, 5)
-         # Verify if will flickTail
-         #flickTail = rollDice(2)
-         #if(flickTail == 1)
-         #   callAnimation(SELF_CHARACTER, 8)
-         #end
+         #print("Eat")
+         setAnimation(SELF_CHARACTER, 6)
          # Eat for 10 seconds
          wait(10)
-      else if( (diceValue > 6) && (diceValue <= 9) )
-         # Sit state (30%)
-         print("Sit!")
-         state = 2
-         setAnimation(SELF_CHARACTER, 6)
-         wait(4)
+      else if(diceValue == 8)
+         # Look state (10%)
+         #print("Look!")
+         setAnimation(SELF_CHARACTER, 5)
+         wait(3)
+      else if(diceValue <= 9)
+         # Tail flick (20%)
+         #print("Tail Flick")
+         callAnimation(SELF_CHARACTER, 9)
+         wait(3)
       else if(diceValue == 10)
          # Walk (10%)
-         print("Walk!!\n")
-         state = 4
+         #print("Walk")
          # Get a random position
-         #multFact = rollDice(2)
-         #multFact = (-1)*(multFact - 1)
-         #pX = rollDice(30)
-         #pX = OWNER_POSX + pX
-         #pZ = OWNER_POSZ + (rollDice(30)*(-1*(rollDice(2)-1)))
-         #moveToPosition(SELF_CHARACTER, pX, pZ)
+         pX = OWNER_POSX + (0-1)*(rollDice(2)-1)*rollDice(30)
+         pZ = OWNER_POSZ + (0-1)*(rollDice(2)-1)*rollDice(30)
+         moveToPosition(SELF_CHARACTER, pX, pZ)
       end
    end
 
