@@ -150,7 +150,7 @@ bool isFunction(string s)
            (s == IA_WEAPON_GET_RANGE_TYPE) || (s == IA_WEAPON_GET_RANGE) ||
            (s == IA_WEAPON_SOUND_AT_CHARACTER) || (s == IA_WEAPON_SOUND) ||
            (s == IA_CHARACTER_SHOW_TEXT) || (s == IA_CHARACTER_SET_ANIMATION) ||
-           (s == IA_CHARACTER_CALL_ANIMATION) );
+           (s == IA_CHARACTER_CALL_ANIMATION) || (s == IA_PLAY_SOUND) );
 }
 
 /***********************************************************************
